feat: finishing almost everything regarding to user routes, I only need to look after reset password which I'm going to do later
